k8s/mongo.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template: 
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongo:7.0.14-rc0-jammy
        image: mongo
