k8s/mosquitto-without-volumes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: default
  labels:
    app: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
        containers:
          - name: mosquitto
            image: eclipse-mosquitto:2.0
            ports:
              - containerPort: 1883
